// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitLabOAuthFacility Should throw error when no clientId default configuration provided 1`] = `
Array [
  Array [
    [Error: Client id for GitLab not provided],
  ],
]
`;

exports[`GitLabOAuthFacility Should throw error when no clientSecret default configuration provided 1`] = `
Array [
  Array [
    [Error: Client secret for GitLab not provided],
  ],
]
`;

exports[`GitLabOAuthFacility Should use default configuration 1`] = `
Array [
  "https://gitlab.com/oauth/token",
  Object {
    "client_id": "123",
    "client_secret": "secret",
    "code": "lorem",
    "redirect_uri": "http://127.0.0.1/auth/gitlab/callback",
  },
  Object {
    "headers": Object {
      "Accept": "application/json",
    },
  },
]
`;

exports[`Login Endpoint Should include other required parameters 1`] = `
Object {
  "client_id": "123456",
  "response_type": "code",
}
`;

exports[`Redirect URI Handler Should able to override the profile params 1`] = `
Object {
  "email": "Josianne_Bosco@gmail.com",
  "firstName": "Manuel",
  "id": "123456",
  "lastName": "Auer",
  "name": "Manuel Auer",
  "profilePicture": "http://lorempixel.com/640/480",
  "provider": "GitLab",
  "raw": Object {
    "avatar_url": "http://lorempixel.com/640/480",
    "email": "Josianne_Bosco@gmail.com",
    "id": 123456,
    "name": "Manuel Auer",
  },
}
`;

exports[`Redirect URI Handler Should able to override the profile params 2`] = `
Array [
  "https://gitlab.com/api/v4/user",
  Object {
    "headers": Object {
      "Authorization": "Bearer 87b23deb-3fde-4de5-b726-c1a4bb2747ff",
    },
    "params": Object {
      "fields": "id",
    },
  },
]
`;

exports[`Redirect URI Handler Should handle redirection properly 1`] = `
Object {
  "email": "Josianne_Bosco@gmail.com",
  "firstName": "Manuel",
  "id": "123456",
  "lastName": "Auer",
  "name": "Manuel Auer",
  "profilePicture": "http://lorempixel.com/640/480",
  "provider": "GitLab",
  "raw": Object {
    "avatar_url": "http://lorempixel.com/640/480",
    "email": "Josianne_Bosco@gmail.com",
    "id": 123456,
    "name": "Manuel Auer",
  },
}
`;

exports[`Redirect URI Handler Should handle redirection properly 2`] = `
Array [
  "https://gitlab.com/oauth/token",
  Object {
    "client_id": "123456",
    "client_secret": "super-secret",
    "code": "lorem",
    "redirect_uri": "http://127.0.0.1/auth/gitlab/callback",
  },
  Object {
    "headers": Object {
      "Accept": "application/json",
    },
  },
]
`;

exports[`Redirect URI Handler Should handle redirection properly 3`] = `
Array [
  "https://gitlab.com/api/v4/user",
  Object {
    "headers": Object {
      "Authorization": "Bearer 87b23deb-3fde-4de5-b726-c1a4bb2747ff",
    },
    "params": Object {},
  },
]
`;
